# signaturemodels

./: .gitignore  README.rst  setup.cfg
docs/: example_features.tsv  methods.aux  methods.tex  simulation_tutorial.html  simulation_tutorial.ipynb  tutorial.rst
experiments/: features.yaml  generate_simulation_configs.py  ingest_features.smk  normalize_features.py  snakefile.smk
locusregression/: __init__.py  _cli_utils.py  cli.py  mutation_preprocessing.py
locusregression/corpus/: __init__.py  corpus.py  corpus_maker.py  corpus_persistence.py  featurization.py  filtering.py  genome_tools.py  ingest_tracks.py  interface.py  make_windows.py  reader_utils.py  readers.py  roadmap.py  sample.py  sbs_corpus_maker.py  sbs_observation_config.py  sbs_sample.py  transforms.py
locusregression/corpus/sbs/: corpus_maker.py  mutation_preprocessing.py  observation_config.py
locusregression/explanation/: __init__.py  explanation.py
locusregression/model/: __init__.py  _dirichlet_update.py  _feature_transformer.py  _importance_sampling.py  _model_state.py  _sstats.py  base.py  hyperband.py  model.py  optim.py  optim_beta.py  optim_correlates.py  optim_lambda.py  tune.py
locusregression/model/gbt/: __init__.py  _gbt_sstats.py  (+6 more)
locusregression/mutrate_regressor/: model.py
locusregression/plot/: mutation_rate_plot.py  utils.py
locusregression/simulation/: __init__.py  cosmic.json  evaluate.py  simulation.py
locusregression/tuning/: __init__.py  _objective.py  hyperband.py  study.py  tune.py
signaturemodels/: base.py  correlated_lda.py  correlated_topic_model.py  lda.py
(+2 files in other folders)
